[package]
name = "llvm-bitcursor"
description = "A no-frills bitstream cursor library for Rust"
license = "MIT"
homepage = "https://github.com/woodruffw/llvm-bitcursor.rs"
repository = "https://github.com/woodruffw/llvm-bitcursor.rs"
authors = ["William Woodruff <william@yossarian.net>"]
readme = "README.md"
keywords = ["llvm", "parsing", "binary", "encoding"]
categories = ["compilers", "encoding", "parsing"]
edition = "2018"
version = "0.0.2-rc.6"

[package.metadata.release]
no-dev-version = true
disable-publish = true # handled by GitHub Actions

[features]
default = ["vbr"]
vbr = []

[dependencies]
log = "0.4"
num = "0.4"
rustversion = "1.0"
thiserror = "1.0"
