[package]
name = "llvm-bitcursor"
description = "A no-frills bitstream cursor library for Rust"
license = "MIT"
homepage = "https://github.com/woodruffw/mollusc/tree/main/llvm-bitcursor"
repository = "https://github.com/woodruffw/mollusc"
authors = ["William Woodruff <william@yossarian.net>"]
readme = "README.md"
keywords = ["llvm", "parsing", "binary", "encoding"]
categories = ["compilers", "encoding", "parsing"]
edition = "2018"
version = "0.0.3"

[features]
default = ["vbr"]
vbr = []

[dependencies]
log = "0.4"
num = "0.4"
thiserror = "1.0"
