[package]
name = "llvm-bitstream"
description = "A content-agnostic parser for LLVM's bitstream container format"
license = "MIT"
homepage = "https://github.com/woodruffw/mollusc/tree/main/llvm-bitstream"
repository = "https://github.com/woodruffw/mollusc"
authors = ["William Woodruff <william@yossarian.net>"]
readme = "README.md"
keywords = ["llvm", "parsing", "binary", "encoding"]
categories = ["compilers", "encoding", "parsing"]
edition = "2018"
version = "0.0.3"

[[example]]
name = "dump-bitstream"

[dependencies]
llvm-bitcursor = { version = "0.0.3", path = "../llvm-bitcursor" }
llvm-support = { version = "0.0.3", path = "../llvm-support" }
log = "0.4"
num = "0.4"
num_enum = "0.5.3"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
clap = "4.0.11"
env_logger = "0.9"
