[package]
name = "llvm-constants"
description = "Numeric and enum constants for interacting with LLVM bitstreams and IR"
license = "MIT"
homepage = "https://github.com/woodruffw/mollusc/tree/main/llvm-constants"
repository = "https://github.com/woodruffw/mollusc"
authors = ["William Woodruff <william@yossarian.net>"]
readme = "README.md"
keywords = ["llvm", "parsing", "binary", "encoding"]
categories = ["compilers", "encoding", "parsing"]
edition = "2018"
version = "0.0.2-rc.1"

[dependencies]
num_enum = "0.5.3"
