[package]
name = "llvm-mapper"
version = "0.1.0"
edition = "2018"

[[example]]
name = "unroll-bitstream"

[dependencies]
llvm-bitstream = { version = "0.0.2-rc.3", path = "../llvm-bitstream" }
llvm-constants = { version = "0.0.2-rc.2", path = "../llvm-constants" }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
env_logger = "0.9"
