[package]
name = "llvm-mapper"
description = "A library for mapping the contents of bitstreams into LLVM IR models"
license = "MIT"
homepage = "https://github.com/woodruffw/mollusc/tree/main/llvm-mapper"
repository = "https://github.com/woodruffw/mollusc"
authors = ["William Woodruff <william@yossarian.net>"]
readme = "README.md"
keywords = ["llvm", "parsing", "binary", "encoding"]
categories = ["compilers", "encoding", "parsing"]
edition = "2018"
version = "0.0.2"

[[example]]
name = "unroll-bitstream"

[dependencies]
indexmap = "1.7.0"
hashbrown = "0.12.0"
llvm-bitstream = { version = "0.0.2", path = "../llvm-bitstream" }
llvm-constants = { version = "0.0.2", path = "../llvm-constants" }
llvm-support = { version = "0.0.2", path = "../llvm-support" }
log = "0.4"
num_enum = "0.5.3"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
env_logger = "0.9"
