[package]
name = "llvm-mapper"
description = "A library for mapping the contents of bitstreams into LLVM IR models"
license = "MIT"
homepage = "https://github.com/woodruffw/mollusc/tree/main/llvm-mapper"
repository = "https://github.com/woodruffw/mollusc"
authors = ["William Woodruff <william@yossarian.net>"]
readme = "README.md"
keywords = ["llvm", "parsing", "binary", "encoding"]
categories = ["compilers", "encoding", "parsing"]
edition = "2018"
version = "0.0.4"

[[example]]
name = "unroll-bitstream"

[dependencies]
indexmap = "2.0"
hashbrown = "0.14"
llvm-bitstream = { version = "0.0.3", path = "../llvm-bitstream" }
llvm-support = { version = "0.0.3", path = "../llvm-support" }
log = "0.4"
num_enum = "0.6"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
clap = "4.0"
env_logger = "0.10"
